Draft for adding SOLR support to Lucene-search